--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         
         <basket_item v-for="basket_item in basket_items" v-bind:buy_data="basket_item"></basket_item>
-        <h5 v-if="total">Итого: {{total}} р. {{ counter() }} шт</h5>
+        <h5 v-if="total.count">Итого: {{total.sum}} р. {{ total.count }} шт</h5>
         <h5 v-else>Корзина пустая</h5>
       </div>
 
